Fix: Fixed glow cursor background overflow problem

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  overflow: hidden;
+  /* overflow: hidden; */
   background-color: #0F172A;
   color: white;
 }
